services/servarr/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: services
spec:
  selector:
    app.kubernetes.io/name: bazarr
  ports:
    - protocol: TCP
      port: 6767
      targetPort: 6767
