services/servarr/bazarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr-ingress
  namespace: services
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bazarr.local.hohepa.dev`)
      kind: Rule
      services:
        - name: bazarr
          port: 6767
  tls:
    secretName: local-hohepa-dev-tls
